// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Disabled 1`] = `
<button
  className="dd button text-button "
  disabled={true}
  type="button"
>
  Text
</button>
`;

exports[`Storyshots Components/Button Normal 1`] = `
<button
  className="dd button text-button "
  type="button"
>
  Text
</button>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<button
  className="dd button text-button bg-primary"
  type="button"
>
  Text
</button>
`;

exports[`Storyshots Components/Button Primary Disabled 1`] = `
<button
  className="dd button text-button bg-primary"
  disabled={true}
  type="button"
>
  Text
</button>
`;

exports[`Storyshots Components/EntityEditor Deleted Foo 1`] = `
<form
  className="dd form has-background"
  onSubmit={[Function]}
>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-_name"
    >
      Name
    </label>
    <div
      className="dd form-control"
    >
      <input
        className="dd text-body1 input"
        id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-_name"
        onChange={[Function]}
        type="text"
        value="Hello"
      />
    </div>
  </div>
  <hr
    className="dd divider"
  />
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-title"
    >
      title
    </label>
    <div
      className="dd form-control"
    >
      <input
        className="dd text-body1 input"
        id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-title"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
  <input
    className="dd button text-button bg-primary"
    disabled={false}
    type="submit"
    value="Save"
  />
</form>
`;

exports[`Storyshots Components/EntityEditor Full Foo 1`] = `
<form
  className="dd form has-background"
  onSubmit={[Function]}
>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-_name"
    >
      Name
    </label>
    <div
      className="dd form-control"
    >
      <input
        className="dd text-body1 input"
        id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-_name"
        onChange={[Function]}
        type="text"
        value="Hello"
      />
    </div>
  </div>
  <hr
    className="dd divider"
  />
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-title"
    >
      title
    </label>
    <div
      className="dd form-control"
    >
      <input
        className="dd text-body1 input"
        id="entity-fc66b4d7-61ff-44d4-8f68-cb7f526df046-title"
        onChange={[Function]}
        type="text"
        value="Hello"
      />
    </div>
  </div>
  <input
    className="dd button text-button bg-primary"
    disabled={false}
    type="submit"
    value="Save"
  />
</form>
`;

exports[`Storyshots Components/EntityEditor New Foo 1`] = `
<form
  className="dd form has-background"
  onSubmit={[Function]}
>
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="new-entity-123-_name"
    >
      Name
    </label>
    <div
      className="dd form-control"
    >
      <input
        className="dd text-body1 input"
        id="new-entity-123-_name"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
  <hr
    className="dd divider"
  />
  <div>
    <label
      className="dd text-subtitle1"
      htmlFor="new-entity-123-title"
    >
      title
    </label>
    <div
      className="dd form-control"
    >
      <input
        className="dd text-body1 input"
        id="new-entity-123-title"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
  <input
    className="dd button text-button bg-primary"
    disabled={true}
    type="submit"
    value="Save"
  />
</form>
`;

exports[`Storyshots Components/HelloWorld Normal 1`] = `
<div>
  Hello world
</div>
`;

exports[`Storyshots Components/InputSubmit Disabled 1`] = `
<input
  className="dd button text-button bg-primary"
  disabled={true}
  type="submit"
  value="Done"
/>
`;

exports[`Storyshots Components/InputSubmit Normal 1`] = `
<input
  className="dd button text-button bg-primary"
  type="submit"
  value="Done"
/>
`;
